<resources>

    <string name="app_name">WordNote</string>
    <string name="title_activity_main_menu">WordNote</string>
    <string name="run_session">Начать пролистывать слова</string>
    <string name="menu_settings">Настройки</string>
    <string name="edit_word_list">Редактировать список слов</string>
    <string name="configuration">Настройки</string>
    <string name="about_application">О программе</string>
    <string name="exit_from_application">Выход</string>
    <string name="title_activity_session">ПРОЛИСТЫВАНИЕ</string>
    <string name="show_translation">Показать перевод</string>
    <string name="hide_translation">Скрыть перевод</string>
    <string name="next_word">Следующее слово</string>
    <string name="stub">"? ? ?"</string>
    <string name="path_to_dictionary">/mnt/sdcard/words.txt</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_preferences">Preferences</string>
    
    <string name="word_categories">Категории слов</string>
    <string name="word_selected_categories">Выбранные категории</string>
    
  <string-array name="wordlist">
        <item>apple яблоко</item>
        <item>banaba банан</item>
        <item>coin монета</item>
        <item>dream мечта</item>
        <item>egg яйцо</item>
        <item>flame пламя</item>
        <item>game игра</item>
        <item>height высота</item>
        <item>inch дюйм</item>
        <item>jar банка</item>
        <item>kettle чайник</item>
        <item>lemon димон</item>
        <item>mail почта</item>
        <item>note заметка</item>
        <item>oil масло</item>
        <item>peach персик</item>
        <item>queen королева</item>
        <item>rope веревка</item>
        <item>steam пар</item>
        <item>temple храм</item>
        <item>union объединение</item>
        <item>violence насилие</item>
        <item>window окно</item>
        <item>Xmas Рождество</item>
        <item>yellow желтый</item>
        <item>zero ноль</item>
    </string-array>
</resources>