<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/runSessionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/run_session" 
        android:onClick="startSession"/>

    <Button
        android:id="@+id/editWordListButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/runSessionButton"
        android:text="@string/edit_word_list" />

    <Button
        android:id="@+id/configurationsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editWordListButton"
        android:text="@string/configuration"
        android:onClick="openPreferencesList" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/configurationsButton"
        android:text="@string/about_application" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aboutButton"
        android:text="@string/exit_from_application"
        android:onClick="closeApplication" />

</RelativeLayout>
